Thu Jan 15 17:53:38 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/Documentation/Build.html:

	  Updated build instructions for Debian GNU/Linux and RedHat
	  OS family.

Thu Jan 15 14:39:35 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/Config.rules:

	  Fixed incorrect initialization of UTILITY_BUILD_RULES when
	  UTILITY_ROOT is set. Thanks to Gary Duzan <gduzan@bbn.com>
	  for reporting this.

Thu Jan 15 14:30:44 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* README:

	  Updated the file with information about CIDLC. Thanks to Gary
	  Duzan <gduzan@bbn.com> for motivating this.

Wed Jan 14 18:50:00 2004  Balachandran  <bala@dre.vanderbilt.edu>

        * CIAO version 0.4 released.

Wed Jan 14 15:22:13 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* CIDLC/README
	* CIDLC/README.html:

	  HTML'ised README into a new file README.html and removed the
	  ascii equivalent of it.

Wed Jan 14 11:30:58 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* docs/releasenotes/index.html:
	* docs/index.html:

	  Updated releasenotes.

Wed Jan 14 10:59:10 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* docs/releasenotes:

	  New directory.

	* docs/releasenotes/index.html:

	  The actual document is placed here to be consistent with TAO.

	* docs/releasenotes.html:

	  Removed the file since it has been moved into a new directory.

Tue Jan 13 20:54:31 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* ChangeLog:

	  Lots of entries had gotten removed. Fixed them.

Tue Jan 13 11:24:55 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/Config.rules:

	  Added 'default-if-not-set' value for UTILITY_BUILD_RULES to
	  look into well-known location where RedHat and Debian packages
	  are installed.

Sat Jan 10 11:58:05 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* CIAO.mwc:

	  Fixed a typo in the previous checkin.
