@@ -110,7 +110,7 @@ $ make -f Makefile.alt
 
 <h1><a name="redhat">RedHat OS family [i386.rpm]</a></h1>
 
-<p>You will need to install the following RedHad packages:</p>
+<p>You will need to install the following RedHat packages:</p>
 
 <ol>
 
@@ -121,7 +121,7 @@ $ make -f Makefile.alt
 <code>boost-devel-1.30.2-2.i386.rpm</code></a></li>
 
 <li><a href="ftp://ftp.kolpackov.net/pub/Utility/Utility-1.2/rpm/Utility-1.2.2-3.i386.rpm">
-<code>libutility_1.2.2-1_i386.deb</code></a></li>
+<code>Utility-1.2.2-3.i386.rpm</code></a></li>
 </ol>
 
 <p>For example, if you downloaded them into <code>/usr/src/redhat/RPMS/i386
@@ -130,7 +130,7 @@ $ make -f Makefile.alt
 <pre>$ cd /usr/src/redhat/RPMS/i386
 $ rpm -Uhv make-3.80-1_patched_bbn.i386.rpm
 $ rpm -Uhv boost-devel-1.30.2-2.i386.rpm
-$ rpm -Uhv libutility_1.2.2-1_i386.deb
+$ rpm -Uhv Utility-1.2.2-3.i386.rpm
 </pre>
 </p>
 
